# dnn_system_identification

./: CMakeLists.txt  package.xml
include/: CheckCondition.hpp  ControllerMessage.hpp  IdentificationNode.hpp  ROSUnit_ControlOutputSubscriber.hpp  ROSUnit_OrientationSubscriber.hpp  ROSUnit_UpdateController.hpp  common_types.hpp
src/: CheckCondition.cpp  IdentificationClass.py  IdentificationNode.cpp  ROSUnit_ControlOutputSubscriber.cpp  ROSUnit_OrientationSubscriber.cpp  ROSUnit_UpdateController.cpp  Sample.py  discrete_mesh_fullspace.mat  dnn_classify.py  identification_functions.py  main.cpp  systems_truth_table.csv
src/DNNs/24/: discrete_processes.mat  dnn_classify.py  matrix_of_processes.mat  systems_truth_table.csv
src/DNNs/24_vel/: matrix_of_processes.mat  systems_truth_table.csv
src/DNNs/Z/: dnn_classify.py
src/DNNs/inner/: discrete_processes_SOIPTD.mat  matrix_of_processes.mat  systems_truth_table.csv
